--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -635,6 +635,7 @@ The Simple mail transfer Protocol's job is to **mail and/or send** data to anoth
 
 ### WHY WAS IT INVENTED?
 In 1980, Jon Postel and Suzanne Sluizer published RFC 772 which proposed the Mail Transfer Protocol as a replacement for the use of the FTP for mail.
+It proposed a protocol centered around the idea of sending mail and a model for the whole smtp architecture.
 
 ```diff
 - (The least informative explanation I've seen)
@@ -661,8 +662,13 @@ SMTP is used to relay mail messages over the network from the local network's sm
 >
 > If the DATA command processes correctly, the server will return a `250 OKAY` response and send the email to the **recipient's network's Server MTA**.
 
+### SAFETY
+
+Smtp by itself is suceptible to MiTM and sniffing attacks, since it is has no real authentication and the data is sent by cleartext. However that doesn't mean that it's over for smtp, what can be done is tunneling the smtp messages through TLS\SSL. TLS\SSL can provide integity, confidentiality and authenticity to the protocol, making it safer to use!
+
 ```diff
 - (Is SMTP considered secure and safe to use?)
++ Answered, tls\ssl ftw.
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -672,10 +678,10 @@ SMTP is used to relay mail messages over the network from the local network's sm
 ## Post Office Protocol 3 A.K.A POP3
 <font size=2>*[#Layer-7] [TCP/110]*</font><br><br>
 
-POP is used to let the user access their mails online, since smtp is only able to push emails to a destination mailbox.
+POP is used to let the user access their mails online, since smtp is only able to push emails to a destined mailbox.
 
 ### WHY WAS IT INVENTED?
-Smtp is the protocol used to send and forward mails to a mailbox on the mail server, but to view those emails interfacing with the server directly is required. No only do you need to go on the server but you also need both yout machine and the server to be connected. POP solves that issue by downloading you emails from the mail server for you, so you can access them from your machine and view them offline.
+Smtp is the protocol used to send and forward mails to a mailbox on the mail server, but to view those emails interfacing with the server directly is required. No only do you need to go on the server but you also need both your machine and the server to be connected. POP solves that issue by downloading the emails from the mail server for you, so you can access them from your machine and view them offline.
 
 POP3 is the latest version of the protocol with POP 1 being the first, over the years more features have been added to the protocol to make it more useful.
 
@@ -687,7 +693,7 @@ POP3 is the latest version of the protocol with POP 1 being the first, over the 
 
 > <font size=4>**AUTHENTICATION**</font>
 >
-> The client has to authenticate to the server using USER and PASS commands to pass their credentials. After authenticating correctly the server opens the client's mailbox and locks any access to it's content so that it won't change in the midst of a session.
+> The client has to authenticate to the server using USER and PASS commands to pass their credentials. After authenticating correctly the server opens the client's mailbox and locks any access to it's content so that it won't change in the middle of a session.
 > 
 > **NOTICE** communication in POP is not secure and transmitted as cleartext. Special applications of this protocol do provide encryption though.
 
@@ -698,10 +704,11 @@ POP3 is the latest version of the protocol with POP 1 being the first, over the 
 >   * Download all e-mails and delete them from server. (`RDEL`)
 >   * Download all e-mails but keep them on the server. (`RETR`)
 >
-> `After choosing an option the client can command to be sent all the read information` (`RCEV`) and after recieving all the mails they send a confirmation that they recieved them (`RCVD`)
+> After recieving all the mails the client sends a confirmation. (`RCVD`)
 
 ```diff
 - (I do not understant!)
++ Removed.
 ```
 
 > <font size=4>**[POP 3] TRANSACTION**</font>
@@ -728,15 +735,20 @@ POP3 is the latest version of the protocol with POP 1 being the first, over the 
 ## Internet Message Access Protocol A.K.A IMAP
 <font size=2>*[#Layer-7] [#TCP/143] [#TCP/993] [[#What_Came_In_The_Mail?](youtu.be/CjgXx6QyZRg?t=10)]*</font><br><br>
 
-IMAP also dabbles in reading mail messages from a server, but it is way more efficient than POP. It was conceptualized becayse POP had many problems and IMAP was meant to address them.
+IMAP also dabbles in reading mail messages from a server, but it is way more efficient than POP. It was conceptualized because POP had many problems and IMAP was meant to address them.
 
 ```diff
 - (What are the problems in pop that IMAP is meant to solve?)
++ Added.
 ```
 
 ### WHAT DOES IT DO?
 
 IMAP allows the remote managment of folders called mailboxes on the mail server. IMAP allows more delicate control and syncronization between devices, it also allows to connect more than one client to the same mailbox at a time and more. The model of the protocol is also Server and Client to retrieve mail from the server and manage it remotely.
+
+### WHAT DOES IT DO DIFFERENT?
+
+POP lets the user connect to the mail server in order to download their mails. IMAP lets the user connect to their mailbox on the server itself. Where POP brings the mails to the user's computer and deletes them afterwards (most of the time), IMAP saves them and manages them on the server.
 
 ### HOW DOES IT WORK?
 
@@ -835,47 +847,51 @@ A message may be flagged as one of these:
 SMB is a protocol meant for file sharing, not to be confused with file transfer. This protocol allows a user on a Windows machine to share a folder over the network and let other users iteract with it on their local machine without downloading it. It works on a client/server model and uses commands to make the other endpoint operate.
 
 ### WHY WAS IT INVENTED?
-The protocol was invented on 1983 by Barry A. Feigenbaum at IBM in order to provide Hosts, printers and other network nodes `shared access` to files on the network. The protocol was then picked up by Microsoft and even since then it was buit upon with the 4th version of the protocol being the current standard. The protocol was also imitated and ported over to Linux to provide Unix based systems access to file sharing and interfacing abilities with Windows machines.
+The protocol was invented on 1983 by Barry A. Feigenbaum at IBM in order to provide Hosts, printers and other network nodes `shared access` to files on the network. The protocol was then picked up by Microsoft and even since then it was buit upon with the 3rd version of the protocol being the current standard (3). The protocol was also imitated and ported over to Linux to provide Unix based systems access to file sharing and interfacing abilities with Windows machines.
 
 ```diff
 - (You say 4th versions but arent there just 3? You also written it below)
++ True. I think I meant 3.1.
 ```
 
 Over the years the protocol has been divided into dialects (or versions), with each of them building ontop of the one prior to it or changing something. Here are just a few:
 
 > <font size=4>**SMB V1.0**</font>
 >
-> This was the first SMB protocol, it wasn't very efficient or secure. It is widely known that you should not use this protocol.
+> This was the first SMB protocol, it worked by sending commands over the network that communicated the directories and their contents over the network. It also introduced the idea of OpLocks for client side caching and editing in order to prevent spamming the network. It was added to the Lan Manager OS developed by IBM and Microsoft. This version was introduced with  Due to severe security flaws, it is widely known that you should not use this protocol. The protocol has severe security flaws which led to the finding of the [EternalBlue](https://research.checkpoint.com/2017/eternalblue-everything-know/) valnurability. A critical weakness that allowed remote code execution with system privileges.
 
 ```diff
 - (How did it work and why wasnt is secure?)
++ Added.
 ```
 
 > <font size=4>**SMB V2.0**</font>
 >
-> This was the second verision of the protocol, created 20 years after the 1st one. Released with Windows Vista this protocol solves a lot of issues that the last version had like:
-> * Wayyy less commands.
-> * Better performance.
-> * Better security.
+> This was the second verision of the protocol, created 20 years after the 1st one. Released with Windows Vista this protocol solves a lot of issues that the last version had. This protocol had less commands which made it less "chatty" on the network. Larget MTU which makes messages more efficient. Better security which patched the security flaws that came with SMB 1.0, better authentication and smb signing.
 
 ```diff
 - (How is the security better?)
++ Added.
 ```
 
 > <font size=4>**SMB V3.0**</font>
 >
-> This version was introduced with Windows 8 and Windows Server 2012, it provides a lot more facilitation abilities and security solutions. For example message signing and better, strong encryption.
+> This version was introduced with Windows 8 and Windows Server 2012, it provides a lot more facilitation abilities and security solutions. For example message signing and message encryption.
 
 ### HOW DOES IT WORK?
-Communication with the protocol starts when the client sends a request and the server returns a reponse, initiating a connection. Then a session is created with a set of keys, one for encryption and one for signing messages, known to both sides.
+Communication with the protocol starts when the client sends a connect request , initiating a connection with the server.Then a session is created with a set of keys, one for encryption and one for signing messages, known to both sides but never sent on the wire.
 
-`As it's transport layer used can be either TCP (on port 445) or NetBIOS over TCP (nbns on port 139), The protocol also requires authentication`. Either using NTLM or Kerberos (for domain purposes), the first one being vulnurable to attacks. After the authentication and checking permission for the shared folder the server will open a connection to the folder where the cleint can perform various operations, like read and write information from/to it, rename it, delete it, create a new file, copy, save it and more. All of these operations are done on the server side using commands sent by the client.
+The protocol also requires authentication, either using NTLM or Kerberos. The authentication method is decided based on the share that is being accessed, shares that are accessed by an FQDN will use Kerberos to authenticate. While shared that used IPs will use NTLM. After the authentication and permission check for the share the server will open a connection to the folder where the client can read and write information from and to it, copy, rename ,delete and create files. All of these operations are done on the server side using commands sent by the client.
 
 At the end the client will send a command to close the connection and session and the server will follow through, the affect of the operations that the cleint made are saved real-time. Also high versions of SMB allow file handles that can persist though unexpected disconnections.
 
+SMB can use either TCP (port 445) or NetBIOS over TCP (port 139) as transport protocols.
+
 ```diff
 - (What do you mean?)
++ I don't even know.
 - (How can we determine if we are using NTLM or Kerberos?)
++ Depends on the environment we are using the SMB protocol in.
 ```
 
 
@@ -884,15 +900,17 @@ At the end the client will send a command to close the connection and session an
 
 
 ## Simple Network Management Protocol A.K.A SNMP
-<font size=2>*[#Layer-7] [#UDP/161]*</font><br><br>
+<font size=2>*[#Layer-7] [#UDP/161] [#UDP/162]*</font><br><br>
+
 ```diff
 - (There is another port)
++ Added.
 ```
 
 The Simple Network Management Protocol is used to collect device information, like cpu usage, up status and bandwith from all the devices over the network to allow simple network managment from one machine very easily.
 
 ### WHY WAS IT INVENTED?
-The protocol was invented back in 1988, back then networks weren't as big as they are today but they were getting bigger. This is why there was a need for a way to manage IP networks easily, a need which was fullfilled by this protocol.
+  This is why there was a need for a way to manage IP networks easily, a need which was fullfilled by this protocol.
 
 ### HOW DOES IT WORK?
 
@@ -908,10 +926,22 @@ The protocol was invented back in 1988, back then networks weren't as big as the
 >
 > If an interface goes offline on a specific device containing an snmp agent, the agent will send either a `TRAP` or `INFORM` alert to the NMS to notify it. Both alerts have the same purpose but are still a little different, that in the way that they are communicated. An `INFORM alert` will wait for acknowledgment from the server and will resend if it didn't get a message back saying it was acknowledged, a `TRAP alert` will send a forget.
 
-So basically using these operations and with a MIB table on all devices a network administrator can display all the information about their network's devices, and get notified when a device doesn't work as needed.
+Disclaimer, all these messages are sent over **plaintext**. So basically using these operations and with a MIB table on all devices a network administrator can display all the information about their network's devices, and get notified when a device doesn't work as needed.
+
+### DIFFERENT VERSIONS
+
+> <font size=4>SNMPv1</font><br>
+> The original snmp as described above. A noteable vulnerability was that since the protocol communicates cleartext it is easy for an attacker to mimic the other machines' behavior and pretend to be a valid machine on the network.
+
+> <font size=4>SNMPv2</font><br>
+> Improved version that added support for 64 bit, improved error handling and the SET command. Still cleartext so no bueno.
+
+> <font size=4>SNMPv3</font><br>
+> This version added a lot of security services, like access control, authentication and encryption. Making it way more safe than the last two.
 
 ```diff
 - (Is the protocol secure?)
++ SNMPv3 is yes, updated.
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -928,10 +958,15 @@ The protocol is used to synchronize time over all the machines in the network, t
 The way time synchronization works over the internet is by devices syncing their internal clocks with eachother, the reliability of the device's clock sncronization is called `stratum`. `Stratum` is measured from 0 - 15, devices that classify as `stratum 0` are usually professional grade time measurement devices like `Atom clocks` and such, those will connect to `Time servers` which will become `stratum 1` since they sync off of a `stratum 0` device.
 
 NTP Servers on small networks will usually syncronize using stratum 1,2 or 3 servers off the internet and then the other devices on te network will syncronize off of that NTP server.
+On large networks it is recommended to install your own time server hierarchy, from the atomic clock\GPS clock down to the ntp servers to use for time synchronization.
+
+The synchronization of the time plays a big part in the domain, in order to authenticate you need a valid timestamp. The current time of the computer plays a vital part in the Kerberos authentication protocol. Having unsynchronized time from the rest of the computers or heck, even from just the DC itself means you will not be able to authenticate to the domain. So goes for if the DC isn't synchronized with the rest of the machines.
 
 ```diff
 - (How would an NTP server syncronize in a Big network?)
++ Dedicated stratum 0 device.
 - (What happens in in the domain when the computers arent syncronized?)
++ :(
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -1078,7 +1113,7 @@ This protocol is the simplest of the sub-protocols, it is made up of a single by
 TLS saw a big revision in the handshake process, one that made it way less viable for attacks, quicker and kept `Perfect Forward Secrecy`.
 
 Here's an overview of it.
-```┌─┐│└─┘▼◄
+```
 .               CLIENT                            SERVER
 .                 │           CLIENT HELLO          │
 .                 │ ──────────────────────────────> │
@@ -1151,6 +1186,7 @@ for information about HTTPS/2.0 refer to the [HTTP](#hypertext-transfer-protocol
 
 ```diff
 - (I wouldv'e included it as a subclause of HTTP)
++ ¯\_(ツ)_/¯
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -1158,16 +1194,18 @@ for information about HTTPS/2.0 refer to the [HTTP](#hypertext-transfer-protocol
 
 
 ## Internet Protocol Security A.K.A IPsec
-<font size=2>*[#Layer-3] [#VPN] [#Encrypted]*</font><br><br>
+<font size=2>*[#Layer-3] [#UDP/500] [#UDP/4500] [#VPN] [#Encrypted]*</font><br><br>
 
 ```diff
 - (Port?)
++ It was written in the IKE segments but I added it here again.
 ```
 
-IPsec is a protocol that provides VPN services through encryption, A VPN is "A private connection over the public network". IPsec encrypts all packet layers above layer 3, it does that with a process that is simillar to TLS/SSL. Something resembling a handshake, where all the magic happens. But it operates a little differently in concept.
+IPsec is a protocol that provides VPN services through encryption/just encryption/message integrity bsaed on the use. A VPN is "A private connection over the public network". IPsec encrypts all packet layers above layer 3, it does that with a process that is simillar to TLS/SSL. Something resembling a handshake, where all the magic happens. But it operates a little differently in concept.
 
 ```diff
 - (Ipsec == VPN?)
++ Basically, yes. But not only.
 ```
 
 ### WHY WAS IT INVENTED?
@@ -1229,7 +1267,7 @@ Both AH and ESP are encapsulation protocols, an IPsec VPN may use one or both of
 > <font size=4>**IKEv2.0**</font>
 > <font size=2>*[#UDP/500] [#UDP/4500]*</font><br><br>
 >
-> IKE version 2 is faster than version 1, provides `NAT Traversal`, provides a `keep-alive` mechanism, supports the `**Extensible Authentication Protocol [EAP]**`, reconnecting to a tunnel after changing networks, stronger cryptoraphic algorithms (PFS).
+> IKE version 2 is faster than version 1, provides `NAT Traversal`, provides a `keep-alive` mechanism, supports the `Extensible Authentication Protocol [EAP]`, reconnecting to a tunnel after changing networks, stronger cryptoraphic algorithms (PFS).
 > The goal of both IKE protocols is exactly the same, since IKEv2 is a little more complicated and does exactly the same I will not go into the exact process. Just know that IKEv1 sends 6 or 9 messages and IKEv2 sends only 4 messages.
 > 
 > Lastly let's talk about the other protocols
@@ -1244,10 +1282,14 @@ Both AH and ESP are encapsulation protocols, an IPsec VPN may use one or both of
 >
 > This protocol also does what the AH protocol does but it also encrypts the message (ESP supports AES, DES & 3DES). ESP adds an `ESP Trailer` to the IP/TCP packet (depending on tunneling mode) and encrypts that, afterwards it will add an `ESP Header`.
 > ```
->  _________2.DIGESTED__________
-> |        _____1.ENCRYPTED_____|
-> '_______'______ _______ ______'
-> |_ESP_H_|_IP_H_|_TCP_H_|_Data_|
+>                     ┌─────────2.DIGESTED──────────┐──────┐
+>                     │       ┌─────1.ENCRYPTED─────┤      ▼
+>  ┌──────────────────┬───────┬──────┬───────┬──────┬────────────┐
+>  |  NEW IP HEADER   │ ESP H │ IP H │ TCP H │ Data │ ESP AUTH T │
+>  └──────────────────┴───────┴──────┴───────┴──────┴────────────┘
+>  └──────────────────┘
+>   ONLY IN TUNNEL MODE
+> 
 > This diagram shows ESP encapsulation in 'tunnel' tunneling mode.
 > ```
 > Then the protocol `hashes/digests the entire packet` with the `shared key` and puts the hash/digest in a new `ESP Authentication` Trailer. Lastly in the tunneling mode is *Tunnel* the protocol adds a new IP Header.
@@ -1295,41 +1337,46 @@ Alright, first step!
 
 ### Connection Initialization & Key exchange
 ```
+┌┬─┐
+├┴─┤
+│◄►│
+│▼ │
+└──┘
 Since I want to draw another diagram I will do this in a code box. Let's try         C                                 S
-and do this simply step by step. The client will want to initiate a connection.      | Identification String Exchange  |
-The client will send an 'Identification String Exchange' message, to                 | ------------------------------> |
-synchronize the SSH version. The server will return the same message.                | <------------------------------ |
-                                                                                     |                                 |
-Afterwards comes the `Key Exchange Initialization` message, just like in TLS         |   Key Exchange Initialization   |
-the client and server will send their ciphers in preffered order and more            | ------------------------------> |
-parameters that the exchange requires like hashing & compression algorithms.         | <------------------------------ |
-Both client and server will do this at about the same time.                          |                                 |
-                                                                                     |                                 |
-After agreeing on a cipher, hashing & compression algorithm the client will send     |                                 |
-an `ECDH Key Exchange Initialization` message to start a diffie hellman Key          |                                 |
-Exchange procedure. In this step both client and server will generate the same key   |                                 |
-using emphereal public and private they create and send eachother. They will also    |     ECDH Key Exchange Init      |
-sign all of their messages up until now together with their emphereal public key     | ------------------------------> |
-and the secret key as a hash, the server will sign their hash with their private     |     ECDH Key Exchange Reply     |
-rsa key.                                                                             | <------------------------------ |
-                                                                                     |                                 |
-First the server has to accept the server's public rsa key, either by a certificate  |                                 |
-or a `public key database`. If bot of those don't succeed the client can decide      |                                 |
-wether to accept the conection or not.                                               |                                 |
-                                                                                     |                                 |
-The client can decrypt then hash with the server's public rsa key and                |                                 |
-match the server's hash to a hash they generate themselves the exact same way.       |                                 |
-That way the client proves both the server has the same key and that the server is   |                                 |
-the server.                                                                          |                                 |
-                                                                                     |                                 |
-The client and sever will not actually communicate with the shared secret key, they  |                                 |
-will use that key to derive 6 new keys. 2 keys for `encryption`, 2 keys as `Init     |             New Keys            |
-Vectors`, 2 keys for `Integrity` (like, SSL MAC). the client will send an encrypted  | ------------------------------> |
-`New Keys`.                                                                          |     SSH_MSG_SERVICE_REQUEST     |
-                                                                                     | ------------------------------> |
-And to end it, the client send an `SSH_MSG_SERVICE_REQUEST` message to ask for the   |     SSH_MSG_SERVICE_ACCEPT      |
-authentication service. The server will return an `SSH_MSG_SERVICE_ACCEPT` response  | <------------------------------ |
-and the user will be allowed to log in.                                              V                                 V
+and do this simply step by step. The client will want to initiate a connection.      │ Identification String Exchange  │
+The client will send an 'Identification String Exchange' message, to                 │ ──────────────────────────────► │
+synchronize the SSH version. The server will return the same message.                │ ◄────────────────────────────── │
+                                                                                     │                                 │
+Afterwards comes the `Key Exchange Initialization` message, just like in TLS         │   Key Exchange Initialization   │
+the client and server will send their ciphers in preffered order and more            │ ──────────────────────────────► │
+parameters that the exchange requires like hashing & compression algorithms.         │ ◄────────────────────────────── │
+Both client and server will do this at about the same time.                          │                                 │
+                                                                                     │                                 │
+After agreeing on a cipher, hashing & compression algorithm the client will send     │                                 │
+an `ECDH Key Exchange Initialization` message to start a diffie hellman Key          │                                 │
+Exchange procedure. In this step both client and server will generate the same key   │                                 │
+using emphereal public and private they create and send eachother. They will also    │     ECDH Key Exchange Init      │
+sign all of their messages up until now together with their emphereal public key     │ ──────────────────────────────► │
+and the secret key as a hash, the server will sign their hash with their private     │     ECDH Key Exchange Reply     │
+rsa key.                                                                             │ ◄────────────────────────────── │
+                                                                                     │                                 │
+First the server has to accept the server's public rsa key, either by a certificate  │                                 │
+or a `public key database`. If bot of those don't succeed the client can decide      │                                 │
+wether to accept the conection or not.                                               │                                 │
+                                                                                     │                                 │
+The client can decrypt then hash with the server's public rsa key and                │                                 │
+match the server's hash to a hash they generate themselves the exact same way.       │                                 │
+That way the client proves both the server has the same key and that the server is   │                                 │
+the server.                                                                          │                                 │
+                                                                                     │                                 │
+The client and sever will not actually communicate with the shared secret key, they  │                                 │
+will use that key to derive 6 new keys. 2 keys for `encryption`, 2 keys as `Init     │             New Keys            │
+Vectors`, 2 keys for `Integrity` (like, SSL MAC). the client will send an encrypted  │ ──────────────────────────────► │
+`New Keys`.                                                                          │     SSH_MSG_SERVICE_REQUEST     │
+                                                                                     │ ──────────────────────────────► │
+And to end it, the client send an `SSH_MSG_SERVICE_REQUEST` message to ask for the   │     SSH_MSG_SERVICE_ACCEPT      │
+authentication service. The server will return an `SSH_MSG_SERVICE_ACCEPT` response  │ ◄────────────────────────────── │
+and the user will be allowed to log in.                                              ▼                                 ▼
 ```
 
 ### SSH Transport Layer Protocol
@@ -1389,7 +1436,7 @@ This protocol rides ontop of the `SSH Transport Layer Protocol`. The protocol is
 
 
 ```diff
-- (Stratesd checking this protocol but you wrote too much information summaries it)
+- (Started checking this protocol but you wrote too much information summaries it)
 ```
 
 ###### [Back to top](#bigous-protocolous)
@@ -1414,6 +1461,8 @@ RDP uses a bundle of protocols to achieve the final product that is RDP.
  /                                         /|
 /_________________________________________/ |
 |       RDSTLS/SSL/CredSSP (Encrypt)      | |  | An encryption protocol. 
+|_________________________________________|/|
+|       Network Level Authentication      | |  | Authentication Protocol.
 |_________________________________________|/|
 | Multipoint Communication Service (MCS)  | |  | A protocol that lets the connection become multiplexed, meaning communication
 |                  T.125                  | |  | through multiple channels.
@@ -1460,6 +1509,13 @@ To initiate a connection RDP performs a sort of handshake.
 .      |                                             |
 .      V                                             V
 ```
+
+> <font size=4>**Authentication**</font>
+>
+> The authentication is handled by the NLA or _Network Level Authentication_, there are different methods to authenticate using RDP so here are the explanations:<br> 
+> The **credentials** method uses GSS-API which modulates the authentication process for the application (in this case RDP) to use. Once you enter your credentials at the little screen that `mstsc` prompts, they go to the GSS-API and it does that authentication with them. GSS-API works with Kerberos only.<br>
+> The **Smartcard** method simply emulates the smartcard hardware and proxies between the protocol to the actual card reader hardware.<br>
+> Ill spare the technical details on the rest but you may also authenticate with Remote Credential Guard and PKU2U.
 
 > <font size=4>**Connection Initialization**</font>
 >
@@ -1526,6 +1582,7 @@ Obviously this is not the exact structure of an RDP packet, since the entire pac
 
 ```diff
 - (Is the authentication done by the RDP protocole itself?)
++ Yes, and if not it is delegated. Added.
 ```
 
 
@@ -1632,12 +1689,14 @@ Overall, the flow of a connection may look something like this:
 
 
 ## Lighweight Directory Access Protocol A.K.A LDAP
+<font size=2>*[#Layer-7] [#TCP/389] [#TCP/636]*</font><br><br>
 
 ```diff
-- (Port an layer?)
+- (Port and layer?)
++ Added.
 ```
 
-The LDAP protocol is used to enumerate and perform actions on the AD structure of a domain, with this protocol a client can communicate with the DC and gather information about the domain's structure.
+The LDAP protocol is used to enumerate and perform actions on networked directory structures, with this protocol a client can communicate with the LDAP server and gather information about the directory's structure.
 
 ### WHY WAS IT INVENTED?
 
@@ -1645,13 +1704,13 @@ There were many Directory Access protocols (DAPs) before this one, but this one 
 
 ### HOW DOES IT WORK?
 
-This protocol works and a request-response/client-server model. using this protocol a client can perform many oprations on the AD structure as follows:
+This protocol works and a request-response/client-server model. using this protocol a client can perform many oprations on the directory structure as follows:
 
 These messages all follow the same format each with their own MessageID.
 
 > **Bind**
 >
-> First of all, a client must authenticate themselves to access the AD structure. A client must give a name and authentication method.
+> First of all, a client must authenticate themselves to access the LDAP server. A client must give a name and authentication method.
 >
 > **Bind Response**
 >
@@ -1659,7 +1718,7 @@ These messages all follow the same format each with their own MessageID.
 
 > **Search**
 >
-> A client may search the Ad structure using queries, subject to their permissions and limitations.
+> A client may search the directory structure using queries, subject to their permissions and limitations.
 >
 > The client must define the baseObject to refrence objects from, the scope to search in, a filter and some other criteria. All of which construct a sort of template which will then be used to find the objects that match it.
 >
@@ -1669,23 +1728,24 @@ These messages all follow the same format each with their own MessageID.
 
 > **Modify**
 >
-> This operation lets a client perform modifications of objects in the Active Directory. A client must specify an object and what changes he wants to perform.
+> This operation lets a client perform modifications of objects in the directory. A client must specify an object and what changes he wants to perform.
 
 > **Add**
 >
-> This operation lets a client add an object to the Active Directory structure, a client must spcify the full path of the object as the name and it's attributes.
+> This operation lets a client add an object to the directory structure, a client must spcify the full path of the object as the name and it's attributes.
 
 ```diff
 - (Is LDAP exculsive for Active Directory?)
++ No, corrected.
 ```
 
 > **Delete**
 >
-> This operation lets a client delete an object from the Active Directory by specifying it's full path.
+> This operation lets a client delete an object from the directory by specifying it's full path.
 
 > **Modify DN/Rename**
 >
-> This opreation lets a client change the DN (Distiguished Name) of an object in the AD structure, basically moving it in the structure (Since the DN also qualifies as the path). A client must provide the path to the object and the new DN.
+> This opreation lets a client change the DN (Distiguished Name) of an object in the directory structure, basically moving it in the structure (Since the DN also qualifies as the path). A client must provide the path to the object and the new DN.
 >
 > **Response**
 >
@@ -1702,6 +1762,8 @@ These messages all follow the same format each with their own MessageID.
 > **Extend operation**
 >
 > This operation allows a client to include opreations that are not already included in this protocol, like insalling transport layer security.
+
+By default LDAP does not encrypt it's network activity, however there is a version of LDAP called "Secure LDAP"/"LDAPS" (LDAP over TLS/SSL) which allows encryption through tls/ssl.
 
 
 ###### [Back to top](#bigous-protocolous)
