Finished RDP and modbus

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -1616,22 +1616,25 @@ Let's go into details:
 
 > <font size=4>**Client  SQL Batch**</font>
 >
-> When the client wants to send the server sql statements (an sql batch) it will bundle them up in a 'batch' and send them.
+> When the client wants to send the server sql statements it will bundle them up in a 'batch' and send them.
 
 > <font size=4>**Server  Row Data**</font>
 >
-> The server will answer `SQL Batch` messages that return the data that was requested stored in rows.
+> The server will answer `SQL Batch` messages that return the data that was requested in rows.
 
 ```diff
 - (It will return the data in rows or is it stored in rows?)
++ Return it in rows.
 ```
 
 > <font size=4>**Client  Remote Procedure Call (RPC)**</font>
 >
 > If the client wishes to perform an rpc call on the sever then it can send an isolated rpc call packet.
+> This option can be used to query a linked sql server.
 
 ```diff
 - (What do you use this feature for?)
++ Linked servers.
 ```
 
 > <font size=4>**Server  Remote Procedure Call (RPC) Response**</font>
@@ -1771,11 +1774,13 @@ By default LDAP does not encrypt it's network activity, however there is a versi
 
 
 ## Modbus
+<font size=2>*[#Standalone] [#Layer-2] [#Layer-6] [#Layer-7] [#TCP/502]*</font><br><br>
 
-Modbus is a data communication protocol. Modbus provides a common language for devices and equipment to communicate with one another, those devices are usually `PLC` (Programmable Logic Controller) or `SCADA` (Supervisory Control And Data Acquisition) devices. To save any confusion, Modbus is a standalone protocol that does not belong to the TCP/IP or OSI model. However, there is a Modbus version for Ethernet.
+Modbus is a data communication protocol. Modbus provides a common language for devices and equipment to communicate with one another, those devices are usually `PLC` (Programmable Logic Controller) or `SCADA` (Supervisory Control And Data Acquisition) devices. To save any confusion, Modbus is a standalone protocol that does not belong to the TCP/IP or OSI model. However, there is a Modbus version for TCP on port 502.
 
 ```diff
-- (In the Ethernet version What port an layer dos it use?)
+- (In the Ethernet version What port an layer does it use?)
++ Layers 7, 6 & 2, tcp port 502.
 ```
 
 ### WHY WAS IT INVENTED?
@@ -1784,7 +1789,7 @@ Modbus was invented by Modicon in 1979 to be used by it's PLCs. Modbus allows de
 
 ### HOW DOES IT WORK?
 
-The Modbus protocol operates in a `client/server` model, the client is the one **recieving** the information and the server is the one **sending** the information (a bit confusing I know). The information, in the form of bits, is sent over the serial lines. The modbus protocol can operate in two different modes, RTU will send information in the form of binary over the wire, ASCII will send information in the form of ASCII over the wire.
+The Modbus protocol operates in a `client/server` model, the client would be the modbus server and the servers would be the scada or PLC devices (a little confusing). The information, in the form of bits, is sent over the serial lines. The modbus protocol can operate in two different modes, RTU will send information in the form of binary over the wire, ASCII will send information in the form of ASCII over the wire.
 
 The way that message work in RTU mode is as follows:
 
@@ -1802,6 +1807,7 @@ Let's break it down.
 
 ```diff
 - (You said earlier that the server is the one that sends the information...)
++ Corrected.
 ```
 
 > <font size=4>**Opcode**</font>
@@ -1839,8 +1845,13 @@ Let's break it down.
 
 Using these formats in the messages the client and servers can communicate reliably and efficiently.
 
+### IS IT ANY GOOD?
+
+The Modbus protocol is a little old and inefficient, so the question arises of "is it even any good"? First, it is old. And that means it does not support more modern data structures. It also requires a lot of configuration and programming and **isn't really secure** (doesn't have authentication). There is a limit of 247 devices that may be connected to the modbus client at once.
+
 ```diff
 - (Are there any limitations or disadvantages using MODBUS?)
++ Yas.
 ```
 
 ###### [Back to top](#bigous-protocolous)
